# gpn-noc-gpncfg

./: .gitignore  .pre-commit-config.yaml  README.md  dev-env.sh  pyproject.toml
data/: event.toml  gpncfg.toml  gpncfg.toml.example  login.toml  testuser2_ed25519  testuser2_ed25519.pub  testuser2_rsa  testuser2_rsa.pub
gpncfg/: __init__.py  __main__.py
gpncfg/config/: __init__.py  event.toml
gpncfg/data_provider/: __init__.py
gpncfg/deployment/: __init__.py
gpncfg/fiddle/: __init__.py  cumulus.py
gpncfg/generator/: __init__.py
gpncfg/generator/templates/: access-switch_juniper_ex3300-48p.j2  packet-accelerator_arrrista_switch-arista.j2  switch_arista.j2
gpncfg/logger/: __init__.py
gpncfg/main_action/: __init__.py
gpncfg/render/: __init__.py
gpncfg/render/templates/: access-juniper-ex2_00c.j2  access-juniper-ex3300.j2  access-switch_juniper_ex2300c-12p.j2  access-switch_juniper_ex3300-24p.j2  access-switch_juniper_ex3300-48p.j2  router_juniper_mx204.j2  switch_2300c.j2
gpncfg/statistics/: __init__.py
gpncfg/threadaction/: __init__.py
gpncfg/writer/: __init__.py
templates/: switch_arista.j2
