[tool.poetry]
name = "gpncfg"
version = "0.1.0"
description = "Router and Switch Config Generator from Netbox/Nautobot"
authors = ["digital <didev@dinid.net>"]
readme = "README.md"

[tool.poetry.dependencies]
aiohttp = "^3.9.3"
configargparse = "^1.7"
gql = "^3.5.0"
jinja2 = "^3.1.3"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
build = "^1.1.1"
poetry = "^1.8.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
