[tool.poetry]
name = "gpncfg"
version = "0.1.0"
description = "Router and Switch Config Generator from Nautobot"
authors = ["digital <didev@dinid.net>"]
readme = "README.md"


[tool.poetry.dependencies]
aiohttp = "^3.9.3"
colorlog = "^6.8.2"
configargparse = "^1.7"
gql = "^3.5.0"
jinja2 = "^3.1.3"
netmiko = "^4.3.0"
python = "^3.11"
requests = "^2.32.2"
requests-toolbelt = "^1.0.0"
toml = "^0.10.2"
toml-dataclass = "^0.1.0"


[tool.poetry.group.dev.dependencies]
build = "^1.1.1"
poetry = "^1.8.2"
pre-commit = "^3.6.2"
ptpython = "^3.0.26"


[[tool.poetry.include]]
path = "data"


[tool.poetry.scripts]
gpncfg = "gpncfg:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
